# eit-market-data

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run_crawling.sh
.claude/: CLAUDE.md  commit-rules.md
.claude/rules/: commit-messages.md  dart-api-limits.md
.claude/skills/kr-bundle-pipeline/: SKILL.md
.claude/skills/krx-auth-recovery/: SKILL.md
.github/workflows/: daily-market-data.yml
docs/: api-keys.md  eit-research-data-requirements.md  fdr-krx-replacement-assessment.md  pykrx-data-guide.md  smoke-test-results.md  us-data-requirements.md  us-developer-guide.md  wsl2-runbook.md
scripts/: apply_wsl_dns_config.sh  auto_shell.sh  backfill_all.py  build_kr_snapshot.py  build_local_universe.py  build_us_snapshot.py  capture_kr_news_catalog.py  crawl_kr_data.py  crawl_kr_data_fallback.py  fetch_pykrx_all.py  krx_login.py  preflight_kr_data.py  probe_fdr_krx_session.py  run_daily_batch.py  run_local_collection.py  seed_dart_cache.py  smoke_test_backfill.py  smoke_test_us_providers.py  windows_krx_setup_and_probe.cmd  windows_krx_setup_and_probe.ps1
src/eit_market_data/: __init__.py  cache.py  edgar_provider.py  fred_provider.py  local_collection.py  providers.py  snapshot.py  synthetic.py  yfinance_provider.py
tests/: test_ci_safe_provider.py  test_daily_batch.py  test_ecos_provider.py  test_kr_fundamental_provider.py  test_krx_auth.py  test_local_collection.py  test_market_helpers.py  test_naver_news_provider.py  test_news_catalog.py  test_pykrx_provider.py  test_scripts.py
universes/: kr_universe.csv  sp500.csv
(+26 files in other folders)
