[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eit-market-data"
version = "0.1.0"
description = "Standalone point-in-time market data layer for EIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "pandas>=2.1",
    "diskcache>=5.6",
]

[project.optional-dependencies]
real-data = [
    "yfinance>=0.2.36",
    "fredapi>=0.5.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]
kr = [
    "pykrx>=1.0.47",
    "opendartreader>=0.2.3",
    "finance-datareader",
    "pyarrow",
    "requests>=2.31",
    "setuptools<82",
]
all = [
    "yfinance>=0.2.36",
    "fredapi>=0.5.2",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pykrx>=1.0.47",
    "opendartreader>=0.2.3",
    "finance-datareader",
    "pyarrow",
    "requests>=2.31",
    "setuptools<82",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eit_market_data"]
